[gd_scene load_steps=17 format=3 uid="uid://dsyfep1odrxje"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_dvkkp"]
[ext_resource type="PackedScene" uid="uid://cd5ei274xc52" path="res://Platform.tscn" id="1_h7v5i"]
[ext_resource type="PackedScene" uid="uid://bo06sxbv5vfye" path="res://scenes/Player.tscn" id="2_pa8x7"]
[ext_resource type="Texture2D" uid="uid://bui71kusl5cqd" path="res://assets/windrise-background.png" id="3_kca3r"]
[ext_resource type="PackedScene" uid="uid://c2jk0a06xmv72" path="res://Platform2.tscn" id="4_8x446"]
[ext_resource type="PackedScene" uid="uid://dktptkneubbuv" path="res://Platform3.tscn" id="5_55278"]
[ext_resource type="PackedScene" uid="uid://cw0r02nn77tv0" path="res://Platform4.tscn" id="6_f2iwf"]
[ext_resource type="PackedScene" uid="uid://xub222smu3l5" path="res://scenes/BlackCat.tscn" id="7_a6lov"]
[ext_resource type="Script" path="res://scenes/DeathArea.gd" id="8_81twm"]
[ext_resource type="Texture2D" uid="uid://bxe5bmqr088g" path="res://assets/board1.png" id="8_n50fi"]
[ext_resource type="Texture2D" uid="uid://ddjcxlrjh1ux8" path="res://assets/button.png" id="9_qq5wo"]
[ext_resource type="FontFile" uid="uid://d1kukatqjsmyy" path="res://assets/04B_30__.TTF" id="9_v63tb"]
[ext_resource type="PackedScene" uid="uid://b7t1a84orsk4x" path="res://scenes/TigerCat.tscn" id="10_bghhg"]
[ext_resource type="AudioStream" uid="uid://c7ia65pu25spc" path="res://assets/mixkit-sweet-kitty-meow-93.wav" id="14_4mhfb"]
[ext_resource type="AudioStream" uid="uid://cxru0n2thfmn4" path="res://assets/Fantasy_Activity_1.mp3" id="15_yfi33"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_poi01"]
size = Vector2(1165, 19)

[node name="Root" type="Node2D"]
script = ExtResource("1_dvkkp")

[node name="Platform" parent="." instance=ExtResource("1_h7v5i")]
position = Vector2(185, 540)

[node name="Player" parent="." instance=ExtResource("2_pa8x7")]
position = Vector2(65, 374)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.505208
offset_right = 1154.0
offset_bottom = 651.0
texture = ExtResource("3_kca3r")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 291.0
offset_top = 110.0
offset_right = 868.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(2.40654e-07, 1.44392e-07, 0.540356, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_v63tb")
theme_override_font_sizes/font_size = 44
text = "Save All Cats :3"

[node name="Platform2" parent="." instance=ExtResource("4_8x446")]
position = Vector2(507, 417)

[node name="Platform3" parent="." instance=ExtResource("5_55278")]
position = Vector2(761, 454)

[node name="Platform4" parent="." instance=ExtResource("6_f2iwf")]
position = Vector2(1021, 608)

[node name="BlackCat" parent="." instance=ExtResource("7_a6lov")]
position = Vector2(1057, 462)

[node name="TigerCat" parent="." instance=ExtResource("10_bghhg")]
position = Vector2(498, 369)

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasGroup"]
offset_left = 440.0
offset_top = 168.0
offset_right = 723.0
offset_bottom = 297.0
color = Color(0, 0, 0, 0.0156863)

[node name="VictoryCard" type="NinePatchRect" parent="CanvasGroup" groups=["VictoryCard"]]
visible = false
offset_left = 440.0
offset_top = 168.0
offset_right = 723.0
offset_bottom = 297.0
texture = ExtResource("8_n50fi")

[node name="Label" type="Label" parent="CanvasGroup/VictoryCard"]
layout_mode = 0
offset_left = 28.0
offset_top = 40.0
offset_right = 253.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("9_v63tb")
text = "You got the cat!!!"

[node name="Button" type="TextureButton" parent="CanvasGroup/VictoryCard"]
layout_mode = 0
offset_left = 113.0
offset_top = 72.0
offset_right = 141.0
offset_bottom = 86.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_qq5wo")

[node name="DeathArea" type="Area2D" parent="."]
script = ExtResource("8_81twm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(581.5, 641.5)
shape = SubResource("RectangleShape2D_poi01")

[node name="CatAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_4mhfb")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_yfi33")
volume_db = -3.962
autoplay = true

[connection signal="body_entered" from="BlackCat" to="." method="_on_black_cat_body_entered"]
[connection signal="body_entered" from="TigerCat" to="." method="_on_tiger_cat_body_entered"]
[connection signal="pressed" from="CanvasGroup/VictoryCard/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_DeathArea_body_entered"]
